--- a/packages/video_player/pubspec.yaml
+++ b/packages/video_player/pubspec.yaml
@@ -2,8 +2,8 @@ name: video_player
 description: Flutter plugin for displaying inline video with other Flutter
   widgets on Android and iOS.
 author: Flutter Team <flutter-dev@googlegroups.com>
-version: 0.10.1+7
-homepage: https://github.com/flutter/plugins/tree/master/packages/video_player
+version: 0.10.4+1
+homepage: https://github.com/flutter/plugins/tree/master/packages/video_player/video_player
 
 flutter:
   plugin:
@@ -13,6 +13,8 @@ flutter:
 
 dependencies:
   meta: "^1.0.5"
+  video_player_platform_interface: ^1.0.1
+
   flutter:
     sdk: flutter
 
@@ -22,4 +24,4 @@ dev_dependencies:
 
 environment:
   sdk: ">=2.0.0-dev.28.0 <3.0.0"
-  flutter: ">=1.2.0 <2.0.0"
+  flutter: ">=1.9.1+hotfix.5 <2.0.0"
